--- a/informative-table-be/package.json
+++ b/informative-table-be/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "db-errors": "^0.2.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mssql": "^6.3.0",
     "multer": "^1.4.2",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6"
   }
 }
